# LalaBot

./: ..pre-commit-config.yaml  .gitignore  lalabot.service  main.py  pyproject.toml
