[project]
name = "lalabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["discord-py>=2.6.4"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
exclude = ["**/__pycache__"]

deprecateTypingAliases = true
reportMissingTypeStubs = "none"
reportPrivateUsage = "none"
reportImplicitOverride = "warning"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportIncompatibleVariableOverride = "none"
reportIncompatibleMethodOverride = "none"


[tool.ruff]
line-length = 125
target-version = "py312"
select = ["ALL"]
ignore = [
    "D",
    "F401",
    "F402",
    "F403",
    "F405",
    "PERF203",
    "RUF001",
    "RUF009",
    "SIM105",
    "UP034",
    "ANN401",
    "UP032",
    "D203",
    "D213",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"


[tool.ruff.lint.isort]
split-on-trailing-comma = true
